--- a/app/views/people/_person_roles.html.erb
+++ b/app/views/people/_person_roles.html.erb
@@ -76,7 +76,7 @@
               <div style="padding: 10px;">
                 <p class='or-style'>or</p>
               </div>
-              <%= link_to benefit_sponsors.new_broker_profile_profiles_broker_agencies_broker_agency_profiles_path(person_id: @person.id, profile_type: :broker_agency) do %>
+              <%= link_to benefit_sponsors.new_general_agency_profile_profiles_general_agencies_general_agency_profiles_path(person_id: @person.id, profile_type: :general_agency) do %>
                 <div class="d-flex flex-row bg-white hub-item-flex-shadow broker-card">
                   <div class="col-2">
                     <i class="far fa-address-card fa-3x"></i>
