adding ga entities & routing to new create action

--- a/app/views/ui-components/v1/forms/_coverage_record.html.slim
+++ b/app/views/ui-components/v1/forms/_coverage_record.html.slim
@@ -19,7 +19,7 @@
 
 .col-md-3.mb-3.optional.hidden
   label for="inputHired"  Hired On *
-  = f.date_field :hired_on, {:class => "form-control", :placeholder => "MM/DD/YYYY", id:'inputHiredOn', maxlength:10, minlength:10}
+  = f.date_field :hired_on, {:class => "form-control", :placeholder => "MM/DD/YYYY", id:'inputHiredOn'}
   .invalid-feedback
     | Please provide a Hired on date.
 hr
