--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -46,6 +46,10 @@
 //= require bootstrap-treeview
 //= require_tree .
 
+// Fixes exception errors with CSRF tokens
+// Citation: https://stackoverflow.com/a/63938925/5331859
+$(document).on('turbolinks:load', function(){ $.rails.refreshCSRFTokens(); });
+
 var disableSelectric = false;
 
 $(document).on('ready page:load turbolinks:load', function () {
