adding employer poc to tabs.

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_staff_roles/_new_staff_member.html.slim
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_staff_roles/_new_staff_member.html.slim
@@ -1,7 +1,7 @@
 .broker-agency-staff-registration-container
   h1.mb-4.heading-text#loaded = l10n("Employer_staff")
   
-  = form_for @staff_member, as: :staff_member, url: {action: "create_staff_member"},  html: { class: "needs-ajax-validation s508", novalidate:true } do |f|
+  = form_for @staff_member, as: :staff_member, :url => url_for(:controller => 'employer_staff_roles', :action => 'create_staff_member'), method: 'post', html: { class: "needs-ajax-validation s508", novalidate:true } do |f|
     div#employer_staff
     = render partial: './ui-components/v1/forms/employer_staff_roles/employer_staff_information', locals: { f: f }
 
