removing required attr when is applying coverage set to false

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_profiles/_new_employer_profile.html.slim
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_profiles/_new_employer_profile.html.slim
@@ -113,15 +113,15 @@ javascript:
         ele.classList.add("hidden");
       });
 
-      ssn.setAttribute("required", "false");
-      gender.setAttribute("required", "false");
-      hiredOn.setAttribute("required", "false");
-      address1.setAttribute("required", "false");
-      city.setAttribute("required", "false");
-      state.setAttribute("required", "false");
-      zip.setAttribute("required", "false");
-      kind.setAttribute("required", "false");
-      emailAddress.setAttribute("required", "false");
+      ssn.removeAttr('required');​​​​​
+      gender.removeAttr('required');​​​​​
+      hiredOn.removeAttr('required');​​​​​
+      address1.removeAttr('required');​​​​​
+      city.removeAttr('required');​​​​​
+      state.removeAttr('required');​​​​​
+      zip.removeAttr('required');​​​​​
+      kind.removeAttr('required');​​​​​
+      emailAddress.removeAttr('required');​​​​​
     }
   }
 
