--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_staff_roles/_new_staff_member.html.slim
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_staff_roles/_new_staff_member.html.slim
@@ -46,9 +46,9 @@ javascript:
         ele.classList.add("hidden");
       });
 
-      ssn.setAttribute("required", "false");
-      gender.setAttribute("required", "false");
-      hiredOn.setAttribute("required", "false");
+      ssn.required = false;
+      gender.required = false;
+      hiredOn.required = false;
     }
   }
 
