--- a/app/views/people/show_roles.html.erb
+++ b/app/views/people/show_roles.html.erb
@@ -1,11 +1,13 @@
-<% content_for :navigation do %>
-  <%= render partial: 'ui-components/v1/navs/manage_account' %>
-<% end %>
-
-<div class="documents-tab container" style="padding-top: 20px !important;">
+<div style="padding-top: 20px !important;">
   <h2> <%= l10n("hub.home_page.title") %> </h2>
 
   <p> <%= l10n("hub.home_page.description") %></p>
 
   <%= render partial: 'people/person_roles' %>
 </div>
+
+<style type="text/css">
+  .row {
+    margin: 0 auto;
+  }
+</style>
