--- a/app/views/ui-components/v1/forms/_coverage_record_dependent.html.erb
+++ b/app/views/ui-components/v1/forms/_coverage_record_dependent.html.erb
@@ -1,22 +1,38 @@
 <div class="col-md-12 col-sm-12 col-xs-12">
   <div class="row row-form-wrapper no-buffer">
-    <div class="col-md-2 col-sm-2 col-xs-12 form-group form-group-lg no-pd">
+    <div class="col-md-2 col-sm-2 col-xs-12">
+      <label for="firstName"> First Name *</label>
       <input class="form-control mb-1" placeholder="First name" id="firstName" type="text" value="<%= @dependent&.first_name %>" name="agency[staff_roles_attributes][0][coverage_record][coverage_record_dependents][<%= i %>][first_name]">
     </div>
-    <div class="col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
+    <div class="col-md-3 col-sm-3 col-xs-12">
+      <label for="middleName"> Middle Name *</label>
       <input class="form-control mb-1" placeholder="Middle name" id="middleName" type="text" value="<%= @dependent&.middle_name %>" name="agency[staff_roles_attributes][0][coverage_record][coverage_record_dependents][<%= i %>][middle_name]">
     </div>
-    <div class="col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
+    <div class="col-md-3 col-sm-3 col-xs-12">
+      <label for="lastName"> Last Name *</label>
       <input class="form-control mb-1" placeholder="Last name" id="lastName" type="text" value="<%= @dependent&.last_name %>" name="agency[staff_roles_attributes][0][coverage_record][coverage_record_dependents][<%= i %>][last_name]">
     </div>
-    <div class="col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
+    <div class="col-md-3 col-sm-3 col-xs-12">
+      <label for="ssn"> SSN *</label>
       <input class="form-control mb-1" placeholder="SSN" id="ssn" type="text" value="<%= @dependent&.ssn %>" name="agency[staff_roles_attributes][0][coverage_record][coverage_record_dependents][<%= i %>][ssn]">
     </div>
-    <div class="col-md-1 col-sm-1 col-xs-12 form-group form-group-lg no-pd">
+    <div class="col-md-1 col-sm-1 col-xs-12">
       <%= hidden_field_tag :_destroy %>
       <%= link_to '#', :class => "remove_fields close-2" do %>
       <%= image_tag("delete.png") %>
       <% end %>
+    </div>
+    <div class="col-md-3 col-sm-3 col-xs-12">
+      <label for="inputDob"> DOB *</label>
+      <input class="form-control mb-1" placeholder="MM/DD/YYYY" id="inputDob" type="text" value="<%= @dependent&.dob %>" name="agency[staff_roles_attributes][0][coverage_record][coverage_record_dependents][<%= i %>][dob]">
+    </div>
+
+    <div class="col-md-3 mb-3 form-group">
+      <label for="inputGender"> Gender *</label>
+      <select class="form-control" id="inputGender" value="<%= @dependent&.gender %>" name="agency[staff_roles_attributes][0][coverage_record][coverage_record_dependents][<%= i %>][gender]">
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+      </select>
     </div>
   </div>
 </div>
