--- a/app/views/people/personal_info.html.erb
+++ b/app/views/people/personal_info.html.erb
@@ -1,11 +1,14 @@
-<% content_for :navigation do %>
-  <%= render partial: 'ui-components/v1/navs/manage_account' %>
-<% end %>
-
-<div class="documents-tab" style="padding-top: 0px !important;">
+<div class="container card">
   <h1> Personal Information</h1>
 
   <p> Edit Information, When finished, select "Save Changes" to continue.</p>
 
   <%= render partial: 'people/person_information' %>
 </div>
+
+<style type="text/css">
+  .card {
+    padding: 5%;
+    margin-top: 25px;
+  }
+</style>
