Refs #92854, added translations for is applicant a student question in other questions and review and submit pages.

--- a/components/financial_assistance/app/views/financial_assistance/applications/review_and_submit.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applications/review_and_submit.html.erb
@@ -355,7 +355,7 @@
               <% end %>
 
               <div class="row row-form-wrapper ptb no-buffer row-height form-content">
-                <div class="col-md-6">Is this person a student?</div>
+                <div class="col-md-6"><%= l10n('faa.other_ques.is_student') %></div>
                 <div class="col-md-6"><%= human_boolean applicant.is_student %></div>
               </div>
 
