--- a/components/financial_assistance/app/views/financial_assistance/applicants/other_questions.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applicants/other_questions.html.erb
@@ -166,7 +166,7 @@
 
         <div class="row row-form-wrapper no-buffer row-height fa-align-elements">
           <div class='col-md-6'>
-            <span class="fa-text-color">Is this person a student? *</span>
+            <span class="fa-text-color"><%= l10n('faa.other_ques.is_student') %></span>
           </div>
           <div class='col-md-2'>
             <%= f.radio_button("is_student", true, class: "radio-yml", id: "is_student_yes") %>
