--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/new_broker_profile.html.slim
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/new_broker_profile.html.slim
@@ -6,34 +6,11 @@
       li
         a href="#broker_agency_staff"  = l10n("broker_agency_staff")
     #broker_registration
-      = render :partial => "benefit_sponsors/profiles/registrations/broker_registration_form", locals: {create_action: 'create_broker_profile'}
+      = render :partial => "benefit_sponsors/profiles/registrations/broker_registration_form", locals: {create_action: 'create_broker_profile', manage_portals: true}
     #broker_agency_staff
+      = render partial: 'benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/new_staff_member'
 
 javascript:
   validateForm();
 
-  $("#broker_agency_form").tabs({
-    activate: function (event, ui) {
-      if (ui.newPanel.selector == "#broker_agency_staff") {
-        var url = "/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/new"
-        if(!$("#loaded").length) {
-          $.ajax({
-            url: url,
-            type: "GET",
-            data: {profile_type: "broker_agency_staff"},
-            success: function (data) {
-              $("#broker_agency_staff").html(data);
-              setTimeout(function() {
-              initDatepicker('inputStaffDOB', new Date("#{Date.today.beginning_of_month-90.years}"), new Date("#{Date.today.end_of_month-18.years}"));
-
-              var cleave = new Cleave('#inputStaffDOB', {
-                  date: true,
-                  datePattern: ['m', 'd', 'Y']
-              });
-              })
-            }
-          })
-        }
-      }
-    }
-  });
+  $("#broker_agency_form").tabs({});
