Change header text for premium reductions

--- a/app/views/insured/consumer_roles/help_paying_coverage.html.erb
+++ b/app/views/insured/consumer_roles/help_paying_coverage.html.erb
@@ -8,7 +8,7 @@
         <input type='hidden' name='exit_after_method' value='false' id='exit_after_method'>
         <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 bottom-pd">
           <div class="bottom-pd">
-            <h2 class="darkblue">Help Paying for Coverage</h2>
+            <h2 class="darkblue">Your Application for Premium Reductions</h2>
             <p><b>You can get help paying for coverage if you qualify.</b><span class="run-glossary"> If you don’t qualify for monthly premium reductions and lower out-of-pocket costs, we’ll also check if you likely qualify for Medicaid.</span></p>
 
             <p class="memo">* = required field</p>
