adding support for ga / ga staff

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/general_agencies/general_agency_profiles/new_general_agency_profile.html.slim
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/general_agencies/general_agency_profiles/new_general_agency_profile.html.slim
@@ -6,27 +6,11 @@
       li
         a href="#general_agency_staff"  = l10n("general_agency_staff")
     #general_agency_registration
-      = render :partial => "benefit_sponsors/profiles/registrations/general_agency_registration_form", locals: {create_action: 'create_ga_profile'}
+      = render :partial => "benefit_sponsors/profiles/registrations/general_agency_registration_form", locals: {create_action: 'create_ga_profile', manage_portals: true}
     #general_agency_staff
+      = render partial: 'benefit_sponsors/profiles/general_agencies/general_agency_staff_roles/new_staff_member'
 
 javascript:
   validateForm();
 
-  $("#general_agency_form").tabs({
-    activate: function (event, ui) {
-      if (ui.newPanel.selector == "#general_agency_staff") {
-        var url = "/benefit_sponsors/profiles/general_agencies/general_agency_staff_roles/new"
-        if(!$("#loaded").length) {
-          $.ajax({
-            url: url,
-            type: "GET",
-            data: {profile_type: "general_agency_staff"},
-            success: function (data) {
-              $("#general_agency_staff").html(data)
-                initDatepicker('inputStaffDOB', new Date("#{Date.today.beginning_of_month-90.years}"), new Date("#{Date.today.end_of_month-18.years}"));
-            }
-          })
-        }
-      }
-    }
-  });
+  $("#general_agency_form").tabs({});
