--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/general_agencies/general_agency_staff_roles/_new_staff_member.html.slim
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/general_agencies/general_agency_staff_roles/_new_staff_member.html.slim
@@ -1,8 +1,9 @@
 .general_agency-staff-registration-container
   h1.mb-4.heading-text#loaded = l10n("general_agency_staff")
 
-  = form_for @staff_member, as: :staff_member, url: { action: "create_staff_member" }, remote: true, html: { class: "needs-ajax-validation s508", id: 'broker_staff_registration_form', novalidate: true } do |f|
+  = form_for @staff_member, as: :staff_member, url: { :controller => 'general_agency_staff_roles', action: "create_staff_member" }, remote: true, html: { class: "needs-ajax-validation s508", id: 'broker_staff_registration_form', novalidate: true } do |f|
     div#broker_staff
+    = f.hidden_field :person_id, value: f.object.person_id
     = render partial: './ui-components/bs4/v1/forms/broker_ga_staff_information', locals: { f: f }
     .row.mt-3.general-agency-search
       .input-group
