--- a/components/financial_assistance/app/views/financial_assistance/applications/review_and_submit.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applications/review_and_submit.html.erb
@@ -432,8 +432,7 @@
                     <div class="col-lg-4">HOUSEHOLD MEMBER</div>
                   </div>
                   <div class="row">
-                    <%#= TODO: Find member_by_id method and move it in %>
-                    <div class="col-lg-3"><%#=  member_name_by_id(er[:predecessor]) %></div>
+                    <div class="col-lg-3"><%= member_name_by_id(er.applicant_id) %></div>
                     <div class="col-lg-5">
                       <div class="select-relation rs_selection">
                         <%= "is " + er.kind %>
@@ -446,7 +445,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4">
-                      <%# = member_name_by_id(er[:successor]) %>
+                      <%= member_name_by_id(er.relative_id) %>
                     </div>
                   </div>
                 </div>
